Create emoCardsAmazed.html ~ emoCardsOthers.html

--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -28,10 +28,13 @@
             <a class="px-4" href="#emoTableTitle">情緒表</a>
             」，瀏覽與認識各種情緒。
           </p>
-          <p>
+          <p class="mb-8">
             此外，若您想增加新的情緒卡・詞彙，可以點選「
-            <a class="px-4" href="addEmoCard">新增情緒卡</a>
+            <a class="px-4" href="addEmoCard.html">新增情緒卡</a>
             」，新增情緒卡。
+          </p>
+          <p class="text-gray-600">
+            🔎 若你想要挑選與紀錄你的情緒，請點選「<a class="px-4 link-gray-600" style="font-size: 16px;" href="findMyEmoitons.html">找尋我的情緒</a>」。
           </p>
         </div>
 
