--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-4801a5a1.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-fbb3c58e.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-00bda354.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-47769357.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -94,7 +94,7 @@
                     <p>假如對情緒存在偏見，否定和壓抑自己的真正感覺，明明傷心卻扮開心，明明生氣卻默默忍受，很容易令身心健康出現問題。所謂情緒健康，不代表要時刻保持愉快心情，而是要有能力覺察自己的不同情緒，了解內心需要，並以健康恰當的方式去表達和調適，讓心靈回復平靜。</p>
                 </div>
                 <div class="text-end mb-16">
-                    <a class="quote" href="https://wmc.hkfyg.org.hk/emo1">
+                    <a class="quote" href="https://wmc.hkfyg.org.hk/emo1" target="_blank">
                         引用文章來源：香港青年協會｜全健空間（九龍）
                     </a>
                 </div>
