--- a/pages/login.html
+++ b/pages/login.html
@@ -36,7 +36,7 @@
                             E-mail
                             <span class="must">*必填</span>
                         </label>
-                        <input type="email" class="form-control px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
@@ -46,7 +46,7 @@
                             密碼
                             <span class="must">*必填</span>
                         </label>
-                        <input type="password" class="form-control px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                         <div class="invalid-feedback">
                             請輸入正確的密碼
                         </div>
