--- a/pages/signup.html
+++ b/pages/signup.html
@@ -36,7 +36,7 @@
                             E-mail
                             <span class="must">*必填</span>
                         </label>
-                        <input type="email" class="form-control px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
@@ -46,7 +46,7 @@
                             密碼
                             <span class="must">*必填</span>
                         </label>
-                        <input type="password" class="form-control px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                         <div class="invalid-feedback">
                             請輸入正確的密碼
                         </div>
@@ -57,7 +57,7 @@
                                 姓
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="text" class="form-control px-20" id="singupLastName" placeholder="王" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupLastName" placeholder="王" required>
                             <div class="invalid-feedback">
                                 請輸入您的姓氏
                             </div>
@@ -67,7 +67,7 @@
                                 名
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="text" class="form-control px-20" id="singupFirstName" placeholder="浪潮" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupFirstName" placeholder="浪潮" required>
                             <div class="invalid-feedback">
                                 請輸入您的名字
                             </div>
@@ -79,7 +79,7 @@
                                 生日
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="date" class="form-control px-20" id="singupBirthday" required>
+                            <input type="date" class="form-control rounded-pill px-20" id="singupBirthday" required>
                             <div class="invalid-feedback">
                                 請輸入您的生日年月日
                             </div>
@@ -88,7 +88,7 @@
                             <label for="singupBirthday" class="form-label d-flex justify-content-between">
                                 身份
                             </label>
-                            <select class="form-select px-20" aria-label="Default select example">
+                            <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="singupBirthday">
                                 <option value="學生">學生</option>
                                 <option value="教師">教師</option>
                                 <option value="諮商師">諮商師</option>
