--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜登入</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-00bda354.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-47769357.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-a2748524.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-7e7e52b0.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -51,7 +51,7 @@
                             E-mail
                             <span class="must">*必填</span>
                         </label>
-                        <input type="email" class="form-control px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
@@ -61,7 +61,7 @@
                             密碼
                             <span class="must">*必填</span>
                         </label>
-                        <input type="password" class="form-control px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                         <div class="invalid-feedback">
                             請輸入正確的密碼
                         </div>
