--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜註冊</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-00bda354.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-47769357.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-a2748524.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-7e7e52b0.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -51,7 +51,7 @@
                             E-mail
                             <span class="must">*必填</span>
                         </label>
-                        <input type="email" class="form-control px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
+                        <input type="email" class="form-control rounded-pill px-20" id="singupEmail" placeholder="wavemocards@gmail.com" required>
                         <div class="invalid-feedback">
                             請輸入正確的 e-mail 帳號
                         </div>
@@ -61,7 +61,7 @@
                             密碼
                             <span class="must">*必填</span>
                         </label>
-                        <input type="password" class="form-control px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
+                        <input type="password" class="form-control rounded-pill px-20" id="singupPassword" required aria-describedby="passwordHelp" placeholder="********" required>
                         <div class="invalid-feedback">
                             請輸入正確的密碼
                         </div>
@@ -72,7 +72,7 @@
                                 姓
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="text" class="form-control px-20" id="singupLastName" placeholder="王" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupLastName" placeholder="王" required>
                             <div class="invalid-feedback">
                                 請輸入您的姓氏
                             </div>
@@ -82,7 +82,7 @@
                                 名
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="text" class="form-control px-20" id="singupFirstName" placeholder="浪潮" required>
+                            <input type="text" class="form-control rounded-pill px-20" id="singupFirstName" placeholder="浪潮" required>
                             <div class="invalid-feedback">
                                 請輸入您的名字
                             </div>
@@ -94,7 +94,7 @@
                                 生日
                                 <span class="must">*必填</span>
                             </label>
-                            <input type="date" class="form-control px-20" id="singupBirthday" required>
+                            <input type="date" class="form-control rounded-pill px-20" id="singupBirthday" required>
                             <div class="invalid-feedback">
                                 請輸入您的生日年月日
                             </div>
@@ -103,7 +103,7 @@
                             <label for="singupBirthday" class="form-label d-flex justify-content-between">
                                 身份
                             </label>
-                            <select class="form-select px-20" aria-label="Default select example">
+                            <select class="form-select px-20 rounded-pill" aria-label="Default select example" id="singupBirthday">
                                 <option value="學生">學生</option>
                                 <option value="教師">教師</option>
                                 <option value="諮商師">諮商師</option>
