--- a/pages/modifyEmoCard.html
+++ b/pages/modifyEmoCard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜新增情緒卡</title>
+    <title>浪潮情緒卡｜編輯情緒卡</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
@@ -14,9 +14,9 @@
     <div class="container py-16">
         <!-- 標題欄 -->
         <div class="titleBar d-flex justify-content-between align-items-center">
-            <h2>新增情緒卡</h2>
+            <h2>編輯情緒卡</h2>
             <div class="nav-btn d-flex justify-content-end">
-                <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">返回</a>
+                <a class="btn btn-outline-main c-btn" href="emoCardsClassified.html">取消</a>
             </div>
         </div>
 
