--- a/pages/emoCardsClassified.html
+++ b/pages/emoCardsClassified.html
@@ -12,9 +12,13 @@
     <%- include('./layout/headerLogined'); -%>
 
     <div class="container py-16">
-      <div class="nav-btn py-16 d-flex justify-content-end">
-        <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
-        <div class="ms-16 btn-disable">情緒卡</div>
+      <!-- 標題 -->
+      <div class="titleBar d-flex justify-content-between align-items-center">
+        <h2>認識情緒</h2>
+        <div class="nav-btn d-flex justify-content-end">
+          <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
+          <div class="ms-16 btn-disable">情緒卡</div>
+        </div>
       </div>
       <!-- 導覽說明 -->
       <div class="guid px-24 py-16 bg-main-tint03">
