--- a/pages/aboutEmotions.html
+++ b/pages/aboutEmotions.html
@@ -13,10 +13,15 @@
 
     <div class="aboutEmotions">
         <div class="container py-16">
-            <div class="nav-btn py-16 d-flex justify-content-end">
-                <div class="btn-disable ">關於情緒</div>
-                <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
+            <!-- 標題 -->
+            <div class="titleBar d-flex justify-content-between align-items-center">
+                <h2>認識情緒</h2>
+                <div class="nav-btn d-flex justify-content-end">
+                    <div class="btn-disable">關於情緒</div>
+                    <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
+                </div>
             </div>
+            
             <div class="introduction py-16">
                 <div class="mb-56">
                     <h2 class="mb-12">什麼是情緒？</h2>
