--- a/aboutEmotions.html
+++ b/aboutEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜認識情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-a2748524.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-7e7e52b0.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9ac40004.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-f1b15530.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -46,10 +46,15 @@
 </header>
     <div class="aboutEmotions">
         <div class="container py-16">
-            <div class="nav-btn py-16 d-flex justify-content-end">
-                <div class="btn-disable ">關於情緒</div>
-                <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
+            <!-- 標題 -->
+            <div class="titleBar d-flex justify-content-between align-items-center">
+                <h2>認識情緒</h2>
+                <div class="nav-btn d-flex justify-content-end">
+                    <div class="btn-disable">關於情緒</div>
+                    <a class="ms-16 btn btn-outline-main c-btn" href="emoCardsClassified.html">情緒卡</a>
+                </div>
             </div>
+            
             <div class="introduction py-16">
                 <div class="mb-56">
                     <h2 class="mb-12">什麼是情緒？</h2>
