--- a/emoCardsClassified.html
+++ b/emoCardsClassified.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜情緒卡-分類</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-a2748524.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-7e7e52b0.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9ac40004.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-f1b15530.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -45,9 +45,13 @@
     </div>
 </header>
     <div class="container py-16">
-      <div class="nav-btn py-16 d-flex justify-content-end">
-        <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
-        <div class="ms-16 btn-disable">情緒卡</div>
+      <!-- 標題 -->
+      <div class="titleBar d-flex justify-content-between align-items-center">
+        <h2>認識情緒</h2>
+        <div class="nav-btn d-flex justify-content-end">
+          <a class="btn btn-outline-main c-btn" href="aboutEmotions.html">關於情緒</a>
+          <div class="ms-16 btn-disable">情緒卡</div>
+        </div>
       </div>
       <!-- 導覽說明 -->
       <div class="guid px-24 py-16 bg-main-tint03">
