--- a/emoCardsClassifiedExpand.html
+++ b/emoCardsClassifiedExpand.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜情緒卡-分類</title>
+    <title>浪潮情緒卡｜情緒卡-展開</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-a2748524.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-7e7e52b0.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-9ac40004.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-f1b15530.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
