--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -15,6 +15,11 @@
             <!-- 標題 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>找尋我的情緒｜分類探索</h2>
+                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                    <i class="bi bi-folder2"></i>
+                    <i class="bi bi-folder2-open"></i>
+                    <span class="ms-4">我的情緒卡夾</span>
+                </a>
             </div>
             <!-- 導覽說明 -->
             <div class="guid px-24 py-16 bg-main-tint03">
@@ -103,7 +108,7 @@
                 🔎 請點擊下方各個情緒名詞，展開詳細情緒資訊。
             </p>
             <p class="mb-32 text-gray-550">
-                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡清單」。
+                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡清夾」中。
             </p>
             <!-- 快樂類 -->
             <div class="d-flex flex-nowrap">
