--- a/findEmoClassifiedExpand.html
+++ b/findEmoClassifiedExpand.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜情緒卡-展開</title>
+    <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜展開</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-73fb226b.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-73f304d5.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-2b60aed8.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-e99a21b1.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -50,12 +50,21 @@
             <div class="nav-btn d-flex justify-content-end">
                 <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">分類</a>
                 <div class="ms-16 btn-disable">展開</div>
+                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                    <i class="bi bi-folder2"></i>
+                    <i class="bi bi-folder2-open"></i>
+                    <span class="ms-4">我的情緒卡夾</span>
+                </a>
             </div>
         </div>
 
+        <p class="mb-24 text-gray-550">
+            🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡夾」中。
+        </p>
+
         <!-- 快樂類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadHappy" href="emoCardsHappy.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadHappy" href="findEmoHappy.html">
                 <span>快</span><span>樂</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -126,7 +135,7 @@
         </div>
         <!-- 期待類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadExpectation" href="emoCardsExpectation.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadExpectation" href="findEmoExpectation.html">
                 <span>期</span><span>待</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -170,7 +179,7 @@
         </div>
         <!-- 放鬆類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadRelived" href="emoCardsRelived.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadRelived" href="findEmoRelived.html">
                 <span>放</span><span>鬆</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -232,7 +241,7 @@
         </div>
         <!-- 不安類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadUnstable" href="emoCardsUnstable.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadUnstable" href="findEmoUnstable.html">
                 <span>不</span><span>安</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -312,7 +321,7 @@
         </div>
         <!-- 驚訝類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadAmazed" href="emoCardsAmazed.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadAmazed" href="findEmoAmazed.html">
                 <span>驚</span><span>訝</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -356,7 +365,7 @@
         </div>
         <!-- 低落類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadSadness" href="emoCardsSadness.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadSadness" href="findEmoSadness.html">
                 <span>低</span><span>落</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -472,7 +481,7 @@
         </div>
         <!-- 討厭類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadHate" href="emoCardsHate.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadHate" href="findEmoHate.html">
                 <span>討</span><span>厭</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -552,7 +561,7 @@
         </div>
         <!-- 生氣類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadAnger" href="emoCardsAnger.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadAnger" href="findEmoAnger.html">
                 <span>生</span><span>氣</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
@@ -605,7 +614,7 @@
         </div>
         <!-- 其他類 -->
         <div class="mb-20 d-flex flex-nowrap">
-            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadOthers" href="emoCardsOthers.html">
+            <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadOthers" href="findEmoOthers.html">
                 <span>其</span><span>他</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
