--- a/findEmoClassified.html
+++ b/findEmoClassified.html
@@ -7,8 +7,8 @@
         <title>浪潮情緒卡｜找尋我的情緒｜分類探索</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <script type="module" crossorigin src="/wavemocards/assets/main-73fb226b.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-73f304d5.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-2b60aed8.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-e99a21b1.css">
     </head>
     <body>
         <header class="header h-logined sticky-top">
@@ -48,6 +48,11 @@
             <!-- 標題 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>找尋我的情緒｜分類探索</h2>
+                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                    <i class="bi bi-folder2"></i>
+                    <i class="bi bi-folder2-open"></i>
+                    <span class="ms-4">我的情緒卡夾</span>
+                </a>
             </div>
             <!-- 導覽說明 -->
             <div class="guid px-24 py-16 bg-main-tint03">
@@ -136,7 +141,7 @@
                 🔎 請點擊下方各個情緒名詞，展開詳細情緒資訊。
             </p>
             <p class="mb-32 text-gray-550">
-                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡清單」。
+                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡清夾」中。
             </p>
             <!-- 快樂類 -->
             <div class="d-flex flex-nowrap">
