Create findEmoExpectation ~ Others.html

--- a/pages/findEmoAnger.html
+++ b/pages/findEmoAnger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜快樂</title>
+    <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜生氣</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   </head>
@@ -15,7 +15,7 @@
         <div class="container py-16">
             <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
-                <h2>快樂</h2>
+                <h2>生氣</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
                     <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
@@ -34,64 +34,46 @@
             <div class="d-flex flex-wrap mb-72">
                 <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy01">
-                        <p>滿&nbsp;足</p>
+                    <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger01">
+                        <p>不&nbsp;滿</p>
                         <div class="img-box">
-                          <img src="../assets/images/happy/happy.svg" alt="happy">
+                        <img src="../assets/images/anger/anger.svg" alt="anger">
                         </div>
                     </button>
                 </div>
                 <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy02">
-                        <p>快&nbsp;樂</p>
+                    <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger02">
+                        <p>煩&nbsp;躁</p>
                         <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
+                        <img src="../assets/images/anger/anger.svg" alt="anger">
                         </div>
                     </button>
                 </div>
                 <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy03">
-                        <p>幸&nbsp;福</p>
+                    <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger03">
+                        <p>生&nbsp;氣</p>
                         <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
+                        <img src="../assets/images/anger/anger.svg" alt="anger">
                         </div>
                     </button>
                 </div>
                 <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy04">
-                        <p>自&nbsp;豪</p>
+                    <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger04">
+                        <p>憤&nbsp;怒</p>
                         <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
+                        <img src="../assets/images/anger/anger.svg" alt="anger">
                         </div>
                     </button>
                 </div>
                 <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy05">
-                        <p>興&nbsp;奮</p>
+                    <button type="button" class="class-card mb-12 bg-anger link-gray-900 class-card-anger" data-bs-toggle="modal" data-bs-target="#addAnger05">
+                        <p>暴&nbsp;怒</p>
                         <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
-                        </div>
-                    </button>
-                </div>
-                <div class="position-relative me-36 mb-20">
-                    <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy06">
-                        <p>痛&nbsp;快</p>
-                        <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
-                        </div>
-                    </button>
-                </div>
-                <div class="position-relative me-36 mb-20">
-                    <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
-                    <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy07">
-                        <p>狂&nbsp;喜</p>
-                        <div class="img-box">
-                        <img src="../assets/images/happy/happy.svg" alt="happy">
+                        <img src="../assets/images/anger/anger.svg" alt="anger">
                         </div>
                     </button>
                 </div>
