--- a/pages/findEmoClassifiedExpand.html
+++ b/pages/findEmoClassifiedExpand.html
@@ -144,10 +144,10 @@
                 </div>
             </div>
         </div>
-        <!-- 放鬆類 -->
+        <!-- 安心類 -->
         <div class="mb-20 d-flex flex-nowrap">
             <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadRelived" href="findEmoRelived.html">
-                <span>放</span><span>鬆</span>
+                <span>安</span><span>心</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
                 <div class="position-relative me-24">
