--- a/findEmoClassifiedExpand.html
+++ b/findEmoClassifiedExpand.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜展開</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-2b60aed8.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e99a21b1.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-20a89196.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c8573f8c.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -177,10 +177,10 @@
                 </div>
             </div>
         </div>
-        <!-- 放鬆類 -->
+        <!-- 安心類 -->
         <div class="mb-20 d-flex flex-nowrap">
             <a class="emoCardsHead mt-20 link-gray-900 emoCardHeadRelived" href="findEmoRelived.html">
-                <span>放</span><span>鬆</span>
+                <span>安</span><span>心</span>
             </a>
             <div class="d-flex overflow-auto pt-20">
                 <div class="position-relative me-24">
