--- a/findEmoHappy.html
+++ b/findEmoHappy.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜快樂</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-2b60aed8.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-e99a21b1.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-20a89196.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-c8573f8c.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -46,6 +46,7 @@
 </header>
     <div class="classifiedPage" style="min-height: 80vh;">
         <div class="container py-16">
+            <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>快樂</h2>
                 <div class="nav-btn d-flex justify-content-end">
@@ -57,8 +58,14 @@
                     </a>
                 </div>
             </div>
+
+            <p class="mb-44 text-gray-550">
+                🔎 透過點擊 <i class="bi bi-plus-lg"></i>，將情緒新增進「我的情緒卡夾」中。
+            </p>
+
+            <!-- cards -->
             <div class="d-flex flex-wrap mb-72">
-                <div class="position-relative me-24 mb-20">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy01">
                         <p>滿&nbsp;足</p>
@@ -67,7 +74,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy02">
                         <p>快&nbsp;樂</p>
@@ -76,7 +83,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy03">
                         <p>幸&nbsp;福</p>
@@ -85,7 +92,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy04">
                         <p>自&nbsp;豪</p>
@@ -94,7 +101,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy05">
                         <p>興&nbsp;奮</p>
@@ -103,7 +110,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy06">
                         <p>痛&nbsp;快</p>
@@ -112,7 +119,7 @@
                         </div>
                     </button>
                 </div>
-                <div class="position-relative me-24">
+                <div class="position-relative me-36 mb-20">
                     <a class="position-absolute top-0 start-100 translate-middle btn-add-card-m"></a>
                     <button type="button" class="class-card mb-12 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#addHappy07">
                         <p>狂&nbsp;喜</p>
