--- a/pages/findEmoClassified.html
+++ b/pages/findEmoClassified.html
@@ -15,7 +15,7 @@
             <!-- 標題 -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>找尋我的情緒｜分類探索</h2>
-                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
                     <i class="bi bi-folder2"></i>
                     <i class="bi bi-folder2-open"></i>
                     <span class="ms-4">我的情緒卡夾</span>
