--- a/pages/findEmoClassifiedExpand.html
+++ b/pages/findEmoClassifiedExpand.html
@@ -17,7 +17,7 @@
             <div class="nav-btn d-flex justify-content-end">
                 <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">分類</a>
                 <div class="ms-16 btn-disable">展開</div>
-                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="AddedEmoCards.html">
+                <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="myEmoCardsHolder.html">
                     <i class="bi bi-folder2"></i>
                     <i class="bi bi-folder2-open"></i>
                     <span class="ms-4">我的情緒卡夾</span>
