--- a/pages/modifyEmoCard.html
+++ b/pages/modifyEmoCard.html
@@ -31,14 +31,11 @@
                 </div>
                 <!-- 情緒詞彙 -->
                 <div class="mb-16">
-                    <label for="addEmoName" class="form-label  d-flex justify-content-between">
+                    <label for="disabledInput" class="form-label  d-flex justify-content-between">
                         情緒詞彙
-                        <span class="must">*必填</span>
+                        <!-- <span class="must">*必填</span> -->
                     </label>
-                    <input type="text" class="form-control px-20 rounded-pill" id="addEmoName" placeholder="開心" required>
-                    <div class="invalid-feedback">
-                        請輸入情緒詞彙，且該詞彙為非重複的情緒詞彙
-                    </div>
+                    <input type="text" class="form-control px-20 rounded-pill" id="disabledInput" placeholder="快樂" disabled>
                 </div>
                 <!-- 意思 -->
                 <div class="mb-16">
@@ -46,7 +43,7 @@
                         意思
                         <!-- <span class="must">*必填</span> -->
                     </label>
-                    <input type="text" class="form-control px-20 rounded-pill" id="addEmoDefinition" placeholder="感到快樂、愉悅，內心充滿愉快。">
+                    <input type="text" class="form-control px-20 rounded-pill" id="addEmoDefinition" placeholder="對事情感到滿意的反應，令人心情良好、滿足和舒暢。">
                 </div>
                 <!-- 例句 -->
                 <div class="mb-16">
@@ -54,7 +51,7 @@
                         例句
                         <!-- <span class="must">*必填</span> -->
                     </label>
-                    <input type="text" class="form-control px-20 rounded-pill" id="addEmoExample" placeholder="和朋友一起玩遊戲，我覺得很開心。">
+                    <input type="text" class="form-control px-20 rounded-pill" id="addEmoExample" placeholder="放學後，我和好朋友一起去吃東西、聊天，而感到好快樂。">
                 </div>
                 <!-- 分類 -->
                 <div class="mb-32">
