--- a/emoCardsHate.html
+++ b/emoCardsHate.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜討厭</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-51978f11.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2e6fed70.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-20da6b82.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-57007505.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -2268,7 +2268,7 @@
     </div>
 </div>
 
-<!-- 放鬆類 + -->
+<!-- 安心類 + -->
 <!-- 舒服 -->
 <div class="modal fade px-32" id="addRelived01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
@@ -3842,6 +3842,38 @@
                 </div>
                 <div class="img">
             <img class="w-100" src="../assets/images/others/others.svg" alt="激動">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- With X -->
+<!-- 期待纇 + -->
+<!-- 期待 -->
+<div class="modal fade px-32" id="deleteExpectation01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+        <div class="modal-content bg-expectation">
+            <div class="modal-body d-flex justify-content-between align-items-center position-relative">
+                <a class="position-absolute top-0 start-100 translate-middle btn-delete-card-xl"></a>
+                <div class="text">
+                    <div class="title w-100 mb-20 d-flex justify-content-between  align-items-end">
+                        <h2>期待</h2>
+                        <a href="modifyEmoCard.html" role="button">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                    </div>
+                    <div class="mb-16">
+                        <h3 class="mb-4">意思：</h3>
+                        <p>充滿期盼，期待未來美好事情的到來，心情充滿期待與興奮。</p>
+                    </div>
+                    <div>
+                        <h3 class="mb-4">例句：</h3>
+                        <p>暑假即將到來，我充滿期待地計畫著可以做的有趣事情。</p>
+                    </div>
+                </div>
+                <div class="img">
+            <img class="w-100" src="/wavemocards/assets/expectation-5303e497.svg" alt="期待">
                 </div>
             </div>
         </div>
