--- a/myEmoCardsHolder.html
+++ b/myEmoCardsHolder.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜我的情緒卡夾</title>
+    <title>浪潮情緒卡｜找尋我的情緒｜我的情緒卡夾</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-20da6b82.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-57007505.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-5db2fbf5.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-2dd4feed.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -74,13 +74,13 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- title bar -->
             <div class="titleBar d-flex justify-content-between align-items-center">
                 <h2>我的情緒卡夾</h2>
                 <div class="nav-btn d-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">返回</a>
-                    <a class="ms-16 btn btn-main c-btn btn-goToMyCards" href="emoStrength1st.html"><span class="ms-4">下一步</span></a>
+                    <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">回到情緒卡</a>
+                    <a class="ms-16 btn btn-main c-btn" href="findEmoStrength1st.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
